fixed input box on smaller screens

--- a/assets/cs/form.css
+++ b/assets/cs/form.css
@@ -193,6 +193,10 @@ input {
     .container-r {
         margin-top: 5px;
     }
+    
+    #content {
+        width: 150px;
+    }
 }
 
 
